# swhid-rs

./: Cargo.toml  README.md  REFERENCE.md
.github/workflows/: rust.yml
benches/: swhid_benchmarks.rs
src/: content.rs  core.rs  directory.rs  error.rs  git.rs  hash.rs  lib.rs  main.rs  permissions.rs  qualifier.rs  release.rs  revision.rs  snapshot.rs  utils.rs
tests/: content.rs  directory.rs  git.rs  release.rs  revision.rs  snapshot.rs
