[package]
name = "swhid"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SWHID v1.2 reference implementation - Complete SWHID (ISO/IEC 18670:2025) parsing and hashing with VCS integration"
repository = "https://example.org/swhid-rs"
keywords = ["swhid", "swhid-v1.2", "iso18670", "software-heritage", "identifier", "hash", "vcs", "git"]
categories = ["encoding", "data-structures", "parsing"]

[features]
default = []
serde = ["dep:serde"]
git = ["dep:git2"]

[dependencies]
hex = "0.4"
thiserror = "1"
percent-encoding = "2"
url = { version = "2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
clap = { version = "4", features = ["derive"] }
sha1collisiondetection = { version = "0.3" }
git2 = { version = "0.20", optional = true }


[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
assert_fs = "1"
predicates = "3"

[[bench]]
name = "swhid_benchmarks"
harness = false
